tests/testFiles/semanticErrors/usedotnontationonstring.meme
ermahgerd a = "10";
ermahgerd b = a.hi;
